id: 5811 fixed alignment of dropdown icon

--- a/dev/sass/qwiki/_select2skin.scss
+++ b/dev/sass/qwiki/_select2skin.scss
@@ -85,6 +85,7 @@
         padding: rem-calc(3);
         .select2-selection__arrow {
             height: 100%;
+            top: 0;
         }
         .select2-selection__rendered {
             padding: 0;
